@@ -175,6 +175,7 @@ Enable printing of debug information.
 .TP
 .BR \-e ,\  \-\-erase
 Erase target.
+Not possible in debugWire mode.
 .TP
 .BR \-E ,\  \-\-event\ <eventlist>
 List of events that do not interrupt.
